# oneDNN

./: .buildinfo  .clang-ignorelist  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  MAINTAINERS.md  README.binary.in  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD-PARTY-PROGRAMS  TODO.md  _clang-format  advanced_topics.html  bench.sh  build.sh  build_and_link.html  class_dnnl_graph_allocator.html  class_dnnl_graph_compiled_partition.html  class_dnnl_graph_graph.html  class_dnnl_graph_logical_tensor.html  class_dnnl_graph_op.html  class_dnnl_graph_partition.html  class_dnnl_graph_tensor.html  class_simple_memory_pool_t.html  dev_guide_attributes.html  dev_guide_attributes_accumulation_mode.html  dev_guide_attributes_deterministic.html  dev_guide_attributes_dropout.html  dev_guide_attributes_fpmath_mode.html  (+582 more)
examples/: CMakeLists.txt  CMakeLists.txt.in  README.md  bnorm_u8_via_binary_postops.cpp  cache_primitive_desc.cpp  cnn_inference_f32.c  cnn_inference_f32.cpp  cnn_inference_fp32.c  cnn_inference_fp32.cpp  cnn_inference_int8.cpp  cnn_training_bf16.cpp  cnn_training_f32.cpp  cnn_training_fp32.c  cnn_training_fp32.cpp  cpu_cnn_inference_f32.c  cpu_cnn_inference_f32.cpp  cpu_cnn_inference_fp32.c  cpu_cnn_inference_fp32.cpp  cpu_cnn_inference_int8.cpp  cpu_cnn_training_bf16.cpp  cpu_cnn_training_f32.c  cpu_cnn_training_f32.cpp  cpu_cnn_training_fp32.c  cpu_cnn_training_fp32.cpp  cpu_getting_started.cpp  cpu_matmul_coo.cpp  cpu_matmul_csr.cpp  cpu_matmul_weights_compression.cpp  cpu_memory_format_propagation.cpp  cpu_performance_profiling.cpp  cpu_rnn_inference_f32.cpp  cpu_rnn_inference_fp32.cpp  cpu_rnn_inference_int8.cpp  cpu_rnn_training_f32.cpp  cpu_rnn_training_fp32.cpp  cross_engine_reorder.c  cross_engine_reorder.cpp  example_macros.h  example_utils.h  example_utils.hpp  (+37 more)
examples/c/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  cpu_cnn_training_f32.cpp  cpu_compile_unknown_output_shape.cpp  cpu_get_started.cpp  cpu_inplace_ports.cpp  cpu_scalar_input.cpp  cpu_simple_pattern_bf16.cpp  cpu_simple_pattern_f32.cpp  cpu_simple_pattern_int8.cpp  cpu_single_op_partition_f32.cpp  example_utils.hpp  gpu_simple_pattern_fp16.cpp  sycl_get_started.cpp
examples/gpu/: CMakeLists.txt  eltwise.c  eltwise.cpp
examples/graph/: cpu_getting_started.cpp  cpu_graph_getting_started.cpp  cpu_inference_int8.cpp  cpu_single_op_partition.cpp  gated_mlp.cpp  gated_mlp_int4.cpp  gated_mlp_quantized.cpp  gated_mlp_wei_combined.cpp  gen_index.cpp  gpu_float_sdpa.cpp  gpu_opencl_getting_started.cpp  gpu_opencl_sdpa.cpp  gpu_single_op_partition.cpp  gqa.cpp  graph_example_utils.hpp  greater_than.cpp  intel_tf_gemm_sdpa.cpp  intel_tf_gemm_sdpa_4d.cpp  mqa.cpp  ocl_first.cpp  ocl_test.cpp  ocl_usm.cpp  pa_sdpa.cpp  sdpa.cpp  sdpa_stacked_qkv.cpp  sycl_getting_started.cpp  sycl_graph_getting_started.cpp  sycl_single_op_partition.cpp
examples/models/: README.md  ResNet50.cpp  VGG.cpp
examples/network/: README.md  pointnet.cpp  prepareData.py
examples/primitives/: augru.cpp  batch_normalization.cpp  binary.cpp  concat.cpp  convolution.cpp  deconvolution.cpp  eltwise.cpp  group_normalization.cpp  inner_product.cpp  layer_normalization.cpp  lbr_gru.cpp  logsoftmax.cpp  lrn.cpp  lstm.cpp  matmul.cpp  micro_sdpa.cpp  pooling.cpp  prelu.cpp  reduction.cpp  reorder.cpp  resampling.cpp  shuffle.cpp  softmax.cpp  sum.cpp  vanilla_rnn.cpp
examples/ukernels/: brgemm.cpp  cpu_brgemm.cpp  cpu_kleidiai.cpp
src/: CMakeLists.txt  TODO.md
src/backend/: CMakeLists.txt
src/common/: CMakeLists.txt  batch_normalization.cpp  batch_normalization.hpp  batch_normalization_pd.hpp  bfloat16.hpp  binary.cpp  binary_pd.hpp  bit_cast.hpp  broadcast_strategy.cpp  broadcast_strategy.hpp  c_types_map.hpp  cache_blob.hpp  cache_blob_id.cpp  cache_blob_id.hpp  cache_hit_types.hpp  cache_stats_types.hpp  cache_utils.hpp  compiler_workarounds.hpp  concat.cpp  concat_pd.hpp  consistency.cpp  consistency.hpp  convolution.cpp  convolution.hpp  convolution_pd.cpp  convolution_pd.hpp  convolution_relu.cpp  convolution_relu.hpp  counting_barrier.hpp  cpp_compat.hpp  cpu_target.h  deconvolution.cpp  deconvolution_pd.hpp  dnnl_debug.cpp  dnnl_debug_autogenerated.cpp  dnnl_omp.h  dnnl_optimize.h  dnnl_sel_build.hpp  dnnl_thread.cpp  dnnl_thread.hpp  (+174 more)
src/compute/: CMakeLists.txt  compute.hpp  compute_engine.hpp  compute_stream.hpp  device_info.hpp  dispatch.cpp  dispatch.hpp  kernel.hpp  kernel_arg_list.hpp  kernel_ctx.hpp  utils.hpp
src/cpu/: CMakeLists.txt  README.md  bfloat16.cpp  bfloat16_utils.hpp  binary_injector_utils.cpp  binary_injector_utils.hpp  cpu_barrier.cpp  cpu_barrier.hpp  cpu_batch_normalization_list.cpp  cpu_batch_normalization_pd.hpp  cpu_batch_normalization_utils.cpp  cpu_batch_normalization_utils.hpp  cpu_binary_list.cpp  cpu_binary_pd.hpp  cpu_concat.cpp  cpu_concat.hpp  cpu_concat_pd.hpp  cpu_convolution.cpp  cpu_convolution_list.cpp  cpu_convolution_pd.hpp  cpu_deconvolution_list.cpp  cpu_deconvolution_pd.hpp  cpu_eltwise_list.cpp  cpu_eltwise_pd.hpp  cpu_engine.cpp  cpu_engine.hpp  cpu_group_normalization_list.cpp  cpu_inner_product_list.cpp  cpu_inner_product_pd.hpp  cpu_isa.hpp  cpu_isa_traits.cpp  cpu_isa_traits.hpp  cpu_layer_normalization_list.cpp  cpu_layer_normalization_pd.hpp  cpu_lrn_list.cpp  cpu_lrn_pd.hpp  cpu_memory.cpp  cpu_memory.hpp  cpu_memory_storage.hpp  cpu_pooling.cpp  (+371 more)
src/gpu/: CMakeLists.txt  README.md  block_structure.cpp  block_structure.hpp  config.hpp  getenv_utils.hpp  gpu_batch_normalization_list.cpp  gpu_batch_normalization_pd.hpp  (+62 more)
tests/: CMakeLists.txt  api.c  api_check.c  api_check.cpp  cpu_x64_isa_common.hpp  gather_c_symbols.sh  generate_c_symbols_refs.sh  main.cpp  only_convolution.c  only_convolution.cpp  only_pooling.c  only_pooling.cpp  refcounting.cpp  simple_convolution.c  splitconcat.c  test_allocator.cpp  test_allocator.hpp  test_conv_id.cpp  test_isa_common.hpp  test_thread.cpp  test_thread.hpp  testing_threadpool.hpp
(+46669 files in other folders)
